--- a/src/Topxia/AdminBundle/Resources/views/User/approval-header.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/approval-header.html.twig
@@ -1,4 +1,4 @@
-<div class="page-header"><h1>实名认证</h1>
+<div class="page-header"><h1>{{'实名认证'|trans}}</h1>
 </div>
 <ul class="nav nav-tabs">
   <li {% if submenu == 'approving' %} class="active" {% endif %} >
