--- a/src/Topxia/AdminBundle/Resources/views/User/change-password-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/change-password-modal.html.twig
@@ -33,7 +33,7 @@
         <div class="col-md-3 control-label"><label for="newPassword">{{'新密码'|trans}}</label></div>
         <div class="col-md-8 controls"> 
         <input class="form-control" type="password" id="newPassword" value="" name="newPassword">
-          <p class="help-block">5-20{{'位英文、数字、符号，区分大小写'|trans}}</p>
+          <p class="help-block">{{'5-20位英文、数字、符号，区分大小写'|trans}}</p>
         </div>
       </div>
 
