--- a/src/Topxia/WebBundle/Resources/views/bootstrap-modal-layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/bootstrap-modal-layout.html.twig
@@ -1,4 +1,6 @@
 {% import "TopxiaWebBundle::macro.html.twig" as web_macro %}
+{% import "TopxiaAdminBundle::macro.html.twig" as admin_macro %}
+
 <div class="modal-dialog {% if modal_class|default('') %} {{ modal_class }}{% endif %}">
   <div class="modal-content">
     <div class="modal-header">
