--- a/src/Topxia/AdminBundle/Resources/views/LoginRecord/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/LoginRecord/index.html.twig
@@ -42,7 +42,7 @@
       <th>{{'用户邮箱'|trans}}</th>
       <th>{{'登录时间IP'|trans}}</th>
       <th>{{'登录地点'|trans}}</th>
-      <th width="12%">查看记录'|trans}}</th>
+      <th width="12%">{{'查看记录'|trans}}</th>
     </tr>
   </thead>
   <tbody>
