article twig complete

--- a/src/Topxia/AdminBundle/Resources/views/Article/article-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Article/article-modal.html.twig
@@ -92,9 +92,9 @@
           </a>
           <div id="article-property-tips-html" style="display:none;">
 
-            <p>{{'设为'|trans}}“<strong>{{'置顶'|trans}}</strong>”{{'后'|trans}}，{{'该资讯将会显示在列表的最前面。'|trans}}</p>
-            <p>{{'设为'|trans}}“<strong>头条</strong>”{{'后'|trans}}，{{'如果设置了缩略图，则该资讯的缩略图将显示在资讯首页的头条图片区，图片尺寸建议统一为：754*424。'|trans}}</p>
-            <p>{{'设为'|trans}}“<strong>{{'推荐'|trans}}</strong>”{{'后'|trans}}，{{'该资讯将会显示在页面右侧的推荐资讯中。'|trans}}</p>
+            <p>{{'设为<strong>置顶</strong>后，该资讯将会显示在列表的最前面。'|trans}}</p>
+            <p>{{'设为<strong>头条</strong>后，如果设置了缩略图，则该资讯的缩略图将显示在资讯首页的头条图片区，图片尺寸建议统一为：754*424。'|trans}}</p>
+            <p>{{'设为<strong>推荐</strong>后，该资讯将会显示在页面右侧的推荐资讯中。'|trans}}</p>
 
           </div>
         </div>
@@ -133,7 +133,7 @@
           <input type="hidden" name="thumb" value="{{article.thumb |default()}}" id="article-thumb">
           <input type="hidden" name="originalThumb" value="{{article.originalThumb |default()}}" id="article-originalThumb">
           <p class="help-block">{{'请上传png, gif, jpg格式的图片文件。'|trans}}</p>
-          <p class="help-block mbs">{{'请推荐尺寸'|trans}}754*424px。
+          <p class="help-block mbs">{{'请推荐尺寸754*424px。'|trans}}
         </div>
       </div>
 
