--- a/src/Topxia/AdminBundle/Resources/views/Article/article-tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Article/article-tr.html.twig
@@ -11,7 +11,7 @@
       <span class="text-muted"><a href="{{ path('article_category',{categoryCode:category.code}) }}"
                                   target="_blank">{{ category.name }}</a></span>
     {% else %}
-      <span class="text-muted">未分类</span>
+      <span class="text-muted">{{'未分类'|trans}}</span>
     {% endif %}
   </td>
   <td>{{ article.publishedTime|date('Y-n-d H:i') }}</td>
@@ -20,18 +20,18 @@
        title="{{ '设置为头条'|trans }}"
        data-set-url="{{ path('admin_article_set_property', {id:article.id,property:'featured'}) }}"
        data-cancel-url="{{ path('admin_article_cancel_property', {id:article.id,property:'featured'}) }}">
-      <span class="label {% if article.featured == 1 %}label-success{% else %}label-default{% endif %}">头</span></a>
+      <span class="label {% if article.featured == 1 %}label-success{% else %}label-default{% endif %}">{{'头'|trans}}</span></a>
     <a href="javascript:;" class="promoted-label" data-toggle="tooltip" data-placement="top"
        title="{{ '推荐该资讯'|trans }}"
        data-set-url="{{ path('admin_article_set_property', {id:article.id,property:'promoted'}) }}"
        data-cancel-url="{{ path('admin_article_cancel_property', {id:article.id,property:'promoted'}) }}">
-      <span class="label {% if article.promoted == 1 %}label-success{% else %}label-default{% endif %}">荐</span></a>
+      <span class="label {% if article.promoted == 1 %}label-success{% else %}label-default{% endif %}">{{'荐'|trans}}</span></a>
 
     <a href="javascript:;" class="sticky-label" data-toggle="tooltip" data-placement="top"
        title="{{ '置顶该资讯'|trans }}"
        data-set-url="{{ path('admin_article_set_property', {id:article.id,property:'sticky'}) }}"
        data-cancel-url="{{ path('admin_article_cancel_property', {id:article.id,property:'sticky'}) }}">
-      <span class="label {% if article.sticky == 1 %}label-success{% else %}label-default{% endif %}">顶</span></a>
+      <span class="label {% if article.sticky == 1 %}label-success{% else %}label-default{% endif %}">{{'顶'|trans}}</span></a>
 
   </td>
 
@@ -39,26 +39,26 @@
 
   <td>
     <div class="btn-group">
-      <a href="{{ path('admin_article_edit',{id:article.id}) }}" class="btn btn-default btn-sm">编辑</a>
+      <a href="{{ path('admin_article_edit',{id:article.id}) }}" class="btn btn-default btn-sm">{{'编辑'|trans}}</a>
       <a href="#" type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
         <span class="caret"></span>
       </a>
       <ul class="dropdown-menu">
         {% if article.status != 'published' %}
           <li><a href="javascript:" data-role="publish-item"
-                 data-url="{{ path('admin_article_publish', {id:article.id}) }}">发布</a></li>
+                 data-url="{{ path('admin_article_publish', {id:article.id}) }}">{{'发布'|trans}}</a></li>
         {% endif %}
         {% if article.status == 'published' %}
           <li><a href="javascript:" data-role="unpublish-item"
-                 data-url="{{ path('admin_article_unpublish', {id:article.id}) }}">取消发布</a></li>
+                 data-url="{{ path('admin_article_unpublish', {id:article.id}) }}">{{'取消发布'|trans}}</a></li>
         {% endif %}
         {% if article.status != 'trash' %}
           <li><a href="javascript:" data-role="trash-item"
-                 data-url="{{ path('admin_article_trash', {id:article.id}) }}">移至回收站</a></li>
+                 data-url="{{ path('admin_article_trash', {id:article.id}) }}">{{'移至回收站'|trans}}</a></li>
         {% endif %}
         {% if article.status == 'trash' %}
           <li><a href="javascript:" data-role="delete-item"
-                 data-url="{{ path('admin_article_delete', {id:article.id}) }}">永久删除</a></li>
+                 data-url="{{ path('admin_article_delete', {id:article.id}) }}">{{'永久删除'|trans}}</a></li>
         {% endif %}
       </ul>
     </div>
