--- a/src/Topxia/AdminBundle/Resources/views/Article/aticle-picture-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Article/aticle-picture-modal.html.twig
@@ -20,7 +20,7 @@
       <div class="col-md-2 control-label">
       </div>
       <div class="controls col-md-8 controls">
-        <p class="help-block">{{'你可以上传JPG、GIF或PNG格式的文件,推荐尺寸754*424px,文件大小不能超过'|trans}}<strong>2M</strong>。</p>
+        <p class="help-block">{{'你可以上传JPG、GIF或PNG格式的文件,推荐尺寸754*424px,文件大小不能超过<strong>2M</strong>。'|trans}}</p>
       </div>
     </div>
 
