--- a/src/Topxia/AdminBundle/Resources/views/Invite/coupon.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Invite/coupon.html.twig
@@ -14,25 +14,25 @@
 	{% endif %}
 
 	<form  class="form-inline well well-sm" action="{{ actionUrl }}" method="get" novalidate>
-    <input class="form-control" type="text" name="nickname" placeholder="用户名" value="{{ app.request.query.get('nickname')}}">
+    <input class="form-control" type="text" name="nickname" placeholder="{{'用户名'|trans}}" value="{{ app.request.query.get('nickname')}}">
      <div class="form-group">
-    领取时间:
-    <input class="form-control" type="text" id="start-date" name="startDateTime" placeholder="开始时间" value="{{ app.request.get('startDateTime') }}">
+    {{'领取时间:'|trans}}
+    <input class="form-control" type="text" id="start-date" name="startDateTime" placeholder="{{'开始时间'|trans}}" value="{{ app.request.get('startDateTime') }}">
     <div class="form-group">-</div>
-    <input class="form-control" type="text" id="end-date" name="endDateTime" placeholder="结束时间" value="{{ app.request.get('endDateTime') }}">
+    <input class="form-control" type="text" id="end-date" name="endDateTime" placeholder="{{'结束时间'|trans}}" value="{{ app.request.get('endDateTime') }}">
     </div>
-    <button class="btn btn-primary" type="submit">搜索</button>
+    <button class="btn btn-primary" type="submit">{{'搜索'|trans}}</button>
 	</form>
 
   <table class="table table-hover table-striped" >
 		<thead>
 			<tr>
-				<th width="15%">用户名</th>
-				<th width="10%">领取时间</th>
-				<th width="15%">面值</th>
-				<th width="20%">使用情况</th>
-				<th width="15%">使用时间</th>
-				<th width="25%">订单信息</th>
+				<th width="15%">{{'用户名'|trans}}</th>
+				<th width="10%">{{'领取时间'|trans}}</th>
+				<th width="15%">{{'面值'|trans}}</th>
+				<th width="20%">{{'使用情况'|trans}}</th>
+				<th width="15%">{{'使用时间'|trans}}</th>
+				<th width="25%">{{'订单信息'|trans}}</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -54,11 +54,11 @@
 				<td>{{coupon.rate}}元</td>
 				<td>
 					{% if card.status == 'unused' %}
-						未使用
+						{{'未使用'|trans}}
 					{% elseif card.status == "receive" %}
-						已领取
+						{{'已领取'|trans}}
 					{% elseif card.status == "used" %}
-						已使用
+						{{'已使用'|trans}}
 					{% endif %}
 				</td>
 				<td>
@@ -71,7 +71,7 @@
 				<td class="text-danger">{{ order.title|default('-') }}</td>					
 			</tr>
 		{% else %}
-			<tr><td colspan="20"><div class="empty">暂无页面记录</div></td></tr>
+			<tr><td colspan="20"><div class="empty">{{'暂无页面记录'|trans}}</div></td></tr>
 		{% endfor %}
 		</tbody>
 	</table>
