系统自检排查修复语言串

--- a/src/Topxia/AdminBundle/Resources/views/System/Report/dir-permission.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/Report/dir-permission.html.twig
@@ -4,7 +4,7 @@
     <td>
       <span class="text-danger">X {{'不可写'|trans}}</span>
     </td>
-    <td>可写</td>
+    <td>{{ '可写'|trans }}</td>
     
   </tr>
 {% else %}
