--- a/src/Topxia/AdminBundle/Resources/views/Announcement/create.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Announcement/create.html.twig
@@ -22,7 +22,7 @@
     </div>
     <div class="col-md-8 controls">
       <input type="text" id="url"  name="url" class="form-control" value="{{ announcement.url|default('')}}">
-      <p class="help-block">{{'以'|trans}}"http://"{{'或'|trans}}"https://"{{'开头'|trans}}</p>
+      <p class="help-block">{{'以"http://"或"https://"开头'|trans}}</p>
     </div>
   </div>
 
