--- a/src/Topxia/AdminBundle/Resources/views/Block/block-visual-items.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Block/block-visual-items.html.twig
@@ -32,7 +32,7 @@
         {% endfor %}
       </div>
     {% if item.count != 1 %}
-      <div class="btn btn-default text-center js-add-btn" style="width:100%;margin-top:-10px;margin-bottom:20px;">+新增</div>
+      <div class="btn btn-default text-center js-add-btn" style="width:100%;margin-top:-10px;margin-bottom:20px;">{{'+新增'|trans}}</div>
     {% endif %}
 
     </section>
