语言串生成

--- a/src/Topxia/WebBundle/Resources/views/Course/explore.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/explore.html.twig
@@ -4,7 +4,7 @@
 {% set siteNav = 'course/explore' %}
 {% set script_controller = 'course/explore' %}
 
-{% block keywords %}{% if categoryArray %}{{categoryArray.name}}{% if categoryParent %}{{ ','}}{{ categoryParent.name|default('') }}{% endif %}{% else %}{{ '全部'|trans }}{% endif %}{% endblock %}
+{% block keywords %}{% if categoryArray %}{{categoryArray.name}}{% if categoryParent %}{{ ','}}{{ categoryParent.name|default('') }}{% endif %}{% else %}{{ '全部' }}{% endif %}{% endblock %}
   {% block description %}{{ categoryArrayDescription|default('')|plain_text(100) }}{% endblock %}
     {% block title %}{{'%name%'|trans({'%name%': categoryArray.name|default('全部'|trans)}) }} - {{setting('site.name')}}{% if setting('site.slogan') %}{{' - '}}{{setting('site.slogan')}}{% endif %}{% if not setting('copyright.owned') %} - Powered By EduSoho{% endif %}
     {% endblock %}
