--- a/src/Topxia/AdminBundle/Resources/views/Content/activity-extended-fields.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Content/activity-extended-fields.html.twig
@@ -19,7 +19,7 @@
 </div>
 
 <div class="form-group">
-	<label>地点</label>
+	<label>{{'地点'|trans}}</label>
 	<div class="controls">
 		<input type="text" name="location" value="{{ field_value(content, 'location') }}">
 	</div>
