--- a/src/Topxia/AdminBundle/Resources/views/Content/content-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Content/content-modal.html.twig
@@ -77,7 +77,7 @@
     <div class="col-md-4 two-col-side">
       {% if 'alias' in type.basicFields %}
         <div class="panel panel-default">
-          <div class="panel-heading">URL路径</div>
+          <div class="panel-heading">{{'URL路径'|trans}}</div>
           <div class="panel-body">
             <div class="form-group">
               <div class="controls">
