--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-info-bar-block.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-info-bar-block.html.twig
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+{#  <div class="col-md-12">
   <div class="es-section open-course-header row">
     <div class="col-md-2 course-img hidden-xs hidden-sm">
       <img class="" src="{{ filepath(course.smallPicture|default(''), 'course.png') }}" alt="{{ course.title }}">
@@ -35,7 +35,7 @@
             <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="es-icon es-icon-share operation-icon"></i></a>
             {{'分享'|trans}}
             {#<div class="gray-darker">523</div>#}
-            {% include 'TopxiaWebBundle:Common:share-dropdown.html.twig' with {type:'open_course'} %}
+           {#{% include 'TopxiaWebBundle:Common:share-dropdown.html.twig' with {type:'open_course'} %}
           </div>
         </li>
         <li class="hidden-xs hidden-sm">
@@ -55,4 +55,51 @@
     </a>
     {% endif %}
   </div>
-</div>
+</div> 
+ #}
+
+ <div class="es-section clearfix">
+    <div class="openCourse-detail-main media hidden-sm hidden-xs">
+     <div class="media-left">
+        <img class="img-responsive" src="{{ filepath(course.smallPicture|default(''), 'course.png') }}" alt="{{ course.title }}">
+     </div>
+     <div class="media-body">
+      <div class="title">{{ course.title }}</div>
+      <div class="metas">
+        <span><i class="es-icon es-icon-removeredeye mrs"></i>{{ course.hitNum }}</span>
+        <span><i class="es-icon es-icon-textsms mrs"></i>{{ course.postNum }}</span>
+      </div>
+     </div>
+    </div>
+    <div class="openCourse-detail-operation">
+      <div class="operation-list">
+        <div class="operation-img operation-zan active">
+          <a href="javascript:;" class="js-like-num" data-like-url="{{ path('open_course_like', {id:course.id}) }}" data-cancel-like-url="{{ path('open_course_unlike', {id:course.id}) }}"><i class="es-icon es-icon-thumbup"></i></a>
+        </div>
+       <span>{{ course.likeNum }}</span>
+      </div>
+      <div class="operation-list">
+        <div class="operation-img  operation-share es-share top">
+            <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="es-icon es-icon-share"></i></a>
+            {% include 'TopxiaWebBundle:Common:share-dropdown.html.twig' with {type:'open_course'} %}
+        </div>
+       {{'分享'|trans}}
+      </div>
+      <div class="operation-list ">
+        <div class="operation-img operation-collection active">
+          <a href="javascript:;" class="js-favorite-num" data-cancel-favorite-url="{{ path('open_course_unfavorite',{id:course.id}) }}" data-favorite-url="{{ path('open_course_favorite',{id:course.id}) }}"><i class="es-icon es-icon-bookmarkoutline"></i></a>
+        </div>
+        <span>{{'收藏'|trans}}</span>
+      </div>
+      <div class="operation-list">
+        <div class="operation-img  operation-code">
+          <a class="js-qrcode qrcode-popover top" data-url="{{path('open_course_qrcode',{id: course.id})}}"> <i class="es-icon es-icon-phone1"></i>
+            <div class="qrcode-content">
+              <img src="" alt="">  
+            </div>
+          </a>
+        </div>
+         {{'二维码'|trans}}
+      </div>
+    </div>
+ </div>
