--- a/web/assets/v2/less/page/open-course.less
+++ b/web/assets/v2/less/page/open-course.less
@@ -1,12 +1,134 @@
+.breadcrumb.openCourse-breadcrumb{
+	margin: -30px 0 0;
+  background: transparent;
+  padding: 25px 0 20px;
+}
+.openCourse-header{
+	margin-bottom: 15px;
+	>.row{
+		margin: 0;
+	}
+} 
+
+.openCourse-detail-main{
+	width: 45%;
+	float: left;
+	img{
+		width: 120px;
+		max-width: 120px;
+		height: 68px;
+		.border-radius(2px);
+	}
+	.title{
+		font-size: 20px;
+		color: @gray-darker;
+		.text-overflow; 
+	}
+	.metas{
+		span{
+			font-size: 15px;
+			color: @gray;
+			&:first-child{
+				margin-right: 30px;
+			}
+		}
+	}
+	.media-body{
+		padding: 8px 0;
+	}
+}
+.openCourse-detail-operation{
+	float: left;
+	width: 55%;
+	padding: 20px 0;
+	@media(max-width:@screen-sm-max)  {
+		width: 100%;
+	}
+	.operation-list{
+		display: inline-block;
+		width: 24%;
+		text-align: center;
+	}
+	.operation-img{
+		display: inline-block;
+    width: 36px;
+    height: 36px;
+    color: #fff;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 36px;
+    margin-right: 8px;
+    background: #919191;
+    .es-transition;
+    a{
+    	color: #fff;
+    }
+    i{
+    	font-size: 18px;
+    }
+	}
+	.operation-zan.active{
+		background: #e85749;
+	}
+	.operation-share:hover{
+		background: #83d460;
+		.es-transition;
+	}
+	.operation-collection.active{
+		background: #53c3f5;
+	}
+	.operation-code:hover{
+		background: #ff8a0c;
+	}
+}
+//列表
+.es-openCourse-list{
+	.course-item{
+		.title{
+			width: 70%;
+			display: inline-block;
+		  overflow: hidden;
+		  text-overflow: ellipsis;
+		  white-space: nowrap;
+		  word-wrap: normal;
+		  font-size: 16px;
+		  margin-top: 20px;
+    	padding: 0 15px;
+		}
+		.course-img{
+			.img-responsive{
+				padding: 0;
+			}
+			.mask{
+				position: absolute;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				background: rgba(0, 0, 0, 0.5);
+				color: #fff;
+				padding: 10px;
+			}
+		} 
+		.metas{
+			padding: 22px 15px;
+		}
+	} 
+}
+
+
 .open-course-title {
 	font-size: 18px;
 	margin-bottom: 10px;
+	.text-overflow; 
+}
+.open-course-mobile-title{
+	font-size: 17px;
+  margin-bottom: 20px;
+  padding: 20px;
 }
 .open-course-views {
 	position: relative;
-	// display: table;
 	padding: 0;
-	// height: 500px;
 	background-color: #000;
 	@media(min-width:@screen-md-min) {
 		height: 500px;
@@ -48,18 +170,17 @@
 		}
 	}
 	.modal-dialog {
-		margin: 13% auto;
-		@media(max-width:@screen-sm-max) {
-			margin: 15% auto;
-		}
 		.modal-img {
 			float: left;
 			width: 33.3%;
 			padding: 0 8px;
-			color: @gray-darker;
 			img {
 				margin-bottom: 12px;
-				.border-radius(3px);
+				.border-radius(4px);
+			}
+			.title{
+				.text-overflow;
+				color: @gray-darker;
 			}
 		}
 		.modal-footer .es-share{
@@ -87,7 +208,9 @@
 		}
 	}
 }
-
+.open-course-mobile-views{
+	background: #fff;
+}
 .open-course-tab {
 	height: 500px;
 	background-color: #212121;
@@ -172,187 +295,203 @@
 		}
 	}
 }
-
-.open-course-header {
-	position: relative;
-	margin-top: 20px;
-	@media(max-width:@screen-sm-max)  {
-		padding: 0;
-	}
-	.course-img {
-		@media(min-width:@screen-md-min)  {
-		width: 12.5%;
-		padding-left: 0;
+.open-course-mobile-tab{
+	background: #fff;
+	margin-bottom: 20px;
+	ul{
+		.tab-header{
+			background-color: #fff;
+			border-bottom:2px solid @gray-dark;
+			color: @gray-dark;
+			font-size: 13px;
 		}
-		// @media(max-width:@screen-sm-max)  {
-		// 	text-align: center;
-		// }
-		img {
-			.border-radius(5px);
-			@media(min-width:@screen-md-min) {
-				width: 120px;
-			}
-			@media(max-width:@screen-sm-max)   {
-				width: 100%;
-			}
+		.tab-header.active{
+			background-color: #fff;
+			border-bottom:2px solid @brand-primary;
+			color: @brand-primary;
 		}
-	}
-	.title {
-		margin-top: 8px;
-		margin-bottom: 10px;
-		font-size: 20px;
-		@media(max-width:@screen-sm-max) {
-			margin-top: 15px;
-			// text-align: center;
-		}
-	}
-	.matas {
-		// @media(max-width:@screen-sm-max)  {
-		// 	text-align: center;
-		// }
-		span{
-			color: @gray;
-			&:first-child {
-				padding-right: 25px;
-			}
-		}
-	} 
-	.course-operation {
-		// padding-top: 15px;
-		color: @gray;
-		// float: right;
-		ul {
-			// float: right;
-			// width: 90%;
-			padding: 0;
-    	margin-bottom: 0;
-    	list-style-type: none;
-    	// @media(max-width:@screen-sm-max) {
-    	// 	float: left;
-    	// }
-		}
-		li {
-			float: left;
-			// width: 145px;
-			width: 25%;
-			padding: 10px 0 10px 20px;
-			margin-top: 5px;
-			line-height: 35px;
-			border-right: 1px solid #f1f1f1;
-			@media(max-width:@screen-sm-max)  {
-				width: 33.33%;
-				height: 55px;
-				padding: 10px 0;
-				&:nth-child(5) {
-					border-right: 0;
-				}
-			}
-			@media(max-width:@screen-sm-max) {
-				border-right: 0;
-			}
-			// @media(max-width:@screen-xs-min)  {
-			// 	width: 25%;
-			// 	height: auto;
-			// 	text-align: center;
-			// 	&:nth-child(3) {
-			// 		border-right: 1px solid #f1f1f1;
-			// 	}
-			// }
-			&:last-child {
-				border-right: 0;
-			}
-			.operation-icon {
-				float: left;
-			    display: block;
-			    width: 35px;
-			    height: 35px;
-			    margin: 0 10px 5px;
-			    font-size: 22px;
-			    line-height: 35px;
-			    vertical-align: middle;
-			    border-radius: 50%;
-			    color: #fff;
-			    text-align: center;
-			    @media(max-width:@screen-xs-max) {
-			    	margin: 0 5px 5px;
-			    }
-		    .es-transition;
-			}
-			.unoperation-list {
-				&:hover,&:active {
-					.unoperation-list {
-						display: none;
-					}
-					.operation-list {
-						display: block;
-					}
-				}
-				.unoperation-icon {
-				background-color: @gray;
-				}
-				.operation-list {
-					background-color: #e85749;
-				}
-			}
-			.es-icon {
-				background-color: @gray;
-			}
-			.es-icon-thumbup:hover, .es-icon-thumbup.active{
-				background-color: #e85749;
-			}
-			.es-icon-bookmarkoutline:hover {
-				background-color: #53c3f5;
-			}
-			.es-icon.es-icon-bookmark {
-				background-color: #53c3f5;
-			}
-			.es-icon-share:hover,.es-icon-share.active {
-				background-color: #83d460;
-			}
-			.es-icon-phone1:hover,.es-icon-phone1.active {
-				background-color: #ff8a0c;
-			}
-			.open-course-qrcode {
-				position: relative;
-				cursor: pointer;
-				.qrcode-popover {
-					position: absolute;
-					left: 0;
-					top: 0;
-					width: 110px;
-					height: 110px;
-					display: none;
-					z-index: 10;
-				}
-				&:hover .qrcode-popover{
-					display: block;
-				}
-			}
-			.es-share.top .dropdown-menu {
-				left: 15px;
-				a {
-			    		margin: 3px 2px 2px 5px !important;
-			    		.es-icon {
-			    			background-color: transparent;
-			    		}
-				}
-			}
-			.qrcode-popover.top .qrcode-content{
-				left: -123px;
-				background-color: @gray-lighter;
-				&:after {
-					border-top-color: @gray-lighter;
-				}
-			}
-		}
-	}
-	.setting {
-		position: absolute;
-		top: 10px;
-		right: 10px;
-		padding: 0 3px;
 	}
 }
+// .open-course-header {
+// 	position: relative;
+// 	margin-top: 20px;
+// 	@media(max-width:@screen-sm-max)  {
+// 		padding: 0;
+// 	}
+// 	.course-img {
+// 		@media(min-width:@screen-md-min)  {
+// 		width: 12.5%;
+// 		padding-left: 0;
+// 		}
+// 		// @media(max-width:@screen-sm-max)  {
+// 		// 	text-align: center;
+// 		// }
+// 		img {
+// 			.border-radius(5px);
+// 			@media(min-width:@screen-md-min) {
+// 				width: 120px;
+// 			}
+// 			@media(max-width:@screen-sm-max)   {
+// 				width: 100%;
+// 			}
+// 		}
+// 	}
+// 	.title {
+// 		margin-top: 8px;
+// 		margin-bottom: 10px;
+// 		font-size: 20px;
+// 		@media(max-width:@screen-sm-max) {
+// 			margin-top: 15px;
+// 			// text-align: center;
+// 		}
+// 	}
+// 	.matas {
+// 		// @media(max-width:@screen-sm-max)  {
+// 		// 	text-align: center;
+// 		// }
+// 		span{
+// 			color: @gray;
+// 			&:first-child {
+// 				padding-right: 25px;
+// 			}
+// 		}
+// 	} 
+// 	.course-operation {
+// 		// padding-top: 15px;
+// 		color: @gray;
+// 		// float: right;
+// 		ul {
+// 			// float: right;
+// 			// width: 90%;
+// 			padding: 0;
+//     	margin-bottom: 0;
+//     	list-style-type: none;
+//     	// @media(max-width:@screen-sm-max) {
+//     	// 	float: left;
+//     	// }
+// 		}
+// 		li {
+// 			float: left;
+// 			// width: 145px;
+// 			width: 25%;
+// 			padding: 10px 0 10px 20px;
+// 			margin-top: 5px;
+// 			line-height: 35px;
+// 			border-right: 1px solid #f1f1f1;
+// 			@media(max-width:@screen-sm-max)  {
+// 				width: 33.33%;
+// 				height: 55px;
+// 				padding: 10px 0;
+// 				&:nth-child(5) {
+// 					border-right: 0;
+// 				}
+// 			}
+// 			@media(max-width:@screen-sm-max) {
+// 				border-right: 0;
+// 			}
+// 			// @media(max-width:@screen-xs-min)  {
+// 			// 	width: 25%;
+// 			// 	height: auto;
+// 			// 	text-align: center;
+// 			// 	&:nth-child(3) {
+// 			// 		border-right: 1px solid #f1f1f1;
+// 			// 	}
+// 			// }
+// 			&:last-child {
+// 				border-right: 0;
+// 			}
+// 			.operation-icon {
+// 				float: left;
+// 			    display: block;
+// 			    width: 35px;
+// 			    height: 35px;
+// 			    margin: 0 10px 5px;
+// 			    font-size: 22px;
+// 			    line-height: 35px;
+// 			    vertical-align: middle;
+// 			    border-radius: 50%;
+// 			    color: #fff;
+// 			    text-align: center;
+// 			    @media(max-width:@screen-xs-max) {
+// 			    	margin: 0 5px 5px;
+// 			    }
+// 		    .es-transition;
+// 			}
+// 			.unoperation-list {
+// 				&:hover,&:active {
+// 					.unoperation-list {
+// 						display: none;
+// 					}
+// 					.operation-list {
+// 						display: block;
+// 					}
+// 				}
+// 				.unoperation-icon {
+// 				background-color: @gray;
+// 				}
+// 				.operation-list {
+// 					background-color: #e85749;
+// 				}
+// 			}
+// 			.es-icon {
+// 				background-color: @gray;
+// 			}
+// 			.es-icon-thumbup:hover, .es-icon-thumbup.active{
+// 				background-color: #e85749;
+// 			}
+// 			.es-icon-bookmarkoutline:hover {
+// 				background-color: #53c3f5;
+// 			}
+// 			.es-icon.es-icon-bookmark {
+// 				background-color: #53c3f5;
+// 			}
+// 			.es-icon-share:hover,.es-icon-share.active {
+// 				background-color: #83d460;
+// 			}
+// 			.es-icon-phone1:hover,.es-icon-phone1.active {
+// 				background-color: #ff8a0c;
+// 			}
+// 			.open-course-qrcode {
+// 				position: relative;
+// 				cursor: pointer;
+// 				.qrcode-popover {
+// 					position: absolute;
+// 					left: 0;
+// 					top: 0;
+// 					width: 110px;
+// 					height: 110px;
+// 					display: none;
+// 					z-index: 10;
+// 				}
+// 				&:hover .qrcode-popover{
+// 					display: block;
+// 				}
+// 			}
+// 			.es-share.top .dropdown-menu {
+// 				left: 15px;
+// 				a {
+// 			    		margin: 3px 2px 2px 5px !important;
+// 			    		.es-icon {
+// 			    			background-color: transparent;
+// 			    		}
+// 				}
+// 			}
+// 			.qrcode-popover.top .qrcode-content{
+// 				left: -123px;
+// 				background-color: @gray-lighter;
+// 				&:after {
+// 					border-top-color: @gray-lighter;
+// 				}
+// 			}
+// 		}
+// 	}
+// 	.setting {
+// 		position: absolute;
+// 		top: 10px;
+// 		right: 10px;
+// 		padding: 0 3px;
+// 	}
+// }
 
 // .open-course-detail {
 // 	.es-section {
@@ -518,3 +657,8 @@
 		}
 	}
 }
+
+
+
+
+
