--- a/src/Topxia/WebBundle/Resources/views/Order/order-table.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Order/order-table.html.twig
@@ -13,7 +13,7 @@
       <th>{{'名称'|trans}}</th>
       <th>{{'创建时间'|trans}}</th>
       <th>{{'状态'|trans}}</th>
-      <th>{{'实付元'|trans}})</th>
+      <th>{{'实付(元)'|trans}}</th>
       {% if mode in ['course', 'admin'] %}
         <th>{{'购买者'|trans}}</th>
       {% endif %}
