--- a/src/Topxia/AdminBundle/Resources/views/Group/set.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Group/set.html.twig
@@ -22,7 +22,7 @@
                 <label >{{'最热话题的时间范围'|trans}}</label>
               </div>
               <div class="controls col-md-7 radios">
-                {{ radios('threadTime_range', {'1':'天'|trans, '7':'周'|trasn,'14':'两周'|trans,'30':'月'|trans}, setting('group').threadTime_range|default('7')) }}
+                {{ radios('threadTime_range', {'1':'天'|trans, '7':'周'|trans,'14':'两周'|trans,'30':'月'|trans}, setting('group').threadTime_range|default('7')) }}
                 <div class="help-block"></div>
               </div>
             </div>
