--- a/src/Topxia/AdminBundle/Resources/views/Invite/set.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Invite/set.html.twig
@@ -38,7 +38,7 @@
         </div>
         <div class="controls col-md-7 "> 
           <div class="checkbox">
-            <input type="checkbox" id="get_coupon_setting" name="get_coupon_setting" value="1" {% if inviteSetting.get_coupon_setting == 1 %} checked="checked" {% endif %} >被邀请人有消费行为后才能获得优惠券
+            <input type="checkbox" id="get_coupon_setting" name="get_coupon_setting" value="1" {% if inviteSetting.get_coupon_setting == 1 %} checked="checked" {% endif %} >{{ '被邀请人有消费行为后才能获得优惠券'|trans }}
           </div>
         </div>
       </div>
