--- a/src/Topxia/AdminBundle/Resources/views/System/optimize.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/optimize.html.twig
@@ -74,7 +74,7 @@
 	       {{'清空系统升级过程中备份的系统文件和备数据库。通过清空系统备份数据，可以让系统释放出更多的磁盘空间'|trans}}
 	    <p/>
 	    <p >
-	  		<button id="removeBackup" class="btn btn-warning fr" data-url="{{ url('admin_optimize_remove_backup') }}">清空系统备份数据</button>
+	  		<button id="removeBackup" class="btn btn-warning fr" data-url="{{ url('admin_optimize_remove_backup') }}">{{ '清空系统备份数据'|trans }}</button>
 	  	</p>
 	  </div>
 	</div>
