--- a/src/Topxia/AdminBundle/Resources/views/Coin/coin-table-vip.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Coin/coin-table-vip.html.twig
@@ -25,10 +25,10 @@
             <input id="rate{{item.id}}" type="text" class="form-control rate" style="width:50px;display:inline-block" value="{{ item.maxRate }}" name="item-rate[{{item.id}}]" data-id="{{item.id}}"/> <label>%</label>
           </td>
           <td>
-            <span id="deRmb{{item.id}}">{{ (item.maxRate * item.monthPrice / 100)|number_format(2, '.') }}</sapn>
+            <span id="deRmb{{item.id}}">{{ (item.maxRate * item.monthPrice / 100)|number_format(2, '.') }}</span>
           </td>
           <td>
-            <span id="cash{{item.id}}">{{ (item.maxRate / 100 * item.monthPrice * set.cash_rate)|number_format(2, '.') }}</sapn>
+            <span id="cash{{item.id}}">{{ (item.maxRate / 100 * item.monthPrice * set.cash_rate)|number_format(2, '.') }}</span>
           </td>
         </tr>
       {% endfor %}
