--- a/src/Topxia/AdminBundle/Resources/views/OrderRefund/refunds.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OrderRefund/refunds.html.twig
@@ -31,7 +31,7 @@
     </div>
 
     <div class="form-group">
-      <input class="form-control" type="text" name="orderSn" value="{{ app.request.get('orderSn') }}" placeholder="订单号">
+      <input class="form-control" type="text" name="orderSn" value="{{ app.request.get('orderSn') }}" placeholder="{{'订单号'|trans}}">
     </div>
 
     <button class="btn btn-primary">{{'搜索'|trans}}</button>
