--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-info-bar-block.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-info-bar-block.html.twig
@@ -91,7 +91,7 @@
         </div>
         <span>{{'收藏'|trans}}</span>
       </div>
-      <div class="operation-list">
+      <div class="operation-list hidden-xs">
         <div class="operation-img  operation-code">
           <a class="js-qrcode qrcode-popover top" data-url="{{path('open_course_qrcode',{id: course.id})}}"> <i class="es-icon es-icon-phone1"></i>
             <div class="qrcode-content">
