--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-header.html.twig
@@ -2,38 +2,27 @@
 
 {% do load_script('open-course/open-course-header') %}
 
-
-{% if course.type == 'open' %}
-  <div class="col-md-9 open-course-views open-course-mobile-views" data-get-recommend-course-url="{{ path('open_course_ad_modal_recommend_course', {id: course.id, num: 3}) }}">
-    {% include 'TopxiaWebBundle:OpenCourse:lesson-play.html.twig' %}
-    <div class="mask modal fade" id="open-course-ad-modal" tabindex="-1" role="dialog" aria-labelledby="openCourseADModal">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="open-course-ad-modal-title">课时学习完成</h4>
-          </div>
-          <div class="modal-body">
-            <div class='empty'>如果喜欢课程内容，赶紧分享给好友吧</div>
-          </div>
-          <div class="modal-footer">
-            <div class="es-share top">
-              <a href="javascript:;" class="btn-link color-gray prl js-player-replay"><i class="es-icon es-icon-refresh prs"></i>重播</a>
-              <a href="" class="btn btn-lg share-btn dropdown-toggle mrm" data-toggle="dropdown">
-                <i class="es-icon es-icon-share prs"></i>{{'分享'|trans}}</a>
-              {% include 'TopxiaWebBundle:Common:share-dropdown.html.twig' with {type:'course'} %}
-              {% if nextLesson is not empty %}
-                <a href="{{ path('open_course_lesson_learn', {'lessonId': nextLesson.id, 'courseId': course.id}) }}" class="btn btn-lg next-btn">
-                  <i class="es-icon es-icon-arrowforward prs"></i>下一课
-                </a>
-              {% endif %}
-            </div>
-          </div>
+<div class="open-course-title open-course-mobile-title">
+  {{ lesson.title }}
+  <p><a href="">EduSoho网校</a></p>
+</div>
+<div class="open-course-mask  modal fade" id="open-course-ad-modal" tabindex="-1" role="dialog" aria-labelledby="openCourseADModal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content open-course-content" data-dismiss="modal" aria-label="Close">
+        <img class="img-responsive" src="{{ asset('assets/v2/img/mobile/opencourse-share.png') }}">
+        <div class="metas">
+          <p>快分享给你的微信小伙伴吧！</p>
+          <a href="javascript:;" class="btn btn-lg open-course-btn">知道了</a>
         </div>
-      </div>
     </div>
+  </div>
+</div>
+{% if course.type == 'open' %}
+  <div class="open-course-views open-course-mobile-views" data-get-recommend-course-url="{{ path('open_course_ad_modal_recommend_course', {id: course.id, num: 3}) }}">
+    {% include 'TopxiaWebBundle:OpenCourse:lesson-play.html.twig' %}
+   
 
-    <div class="mask" style="display:none" id="media-error-dialog">
+    <div class="open-course-mask" style="display:none" id="media-error-dialog">
       <div class="modal-dialog" style="width:200px;margin:22% auto;">
         <div class="modal-content">
           <div class="modal-header" style="padding:5px 15px;">
@@ -45,7 +34,7 @@
         </div>
       </div>
     </div>
-    <div class="open-course-title open-course-mobile-title">{{ lesson.title }}</div>
+    
   </div>
 {% elseif course.type == 'liveOpen' %}
   <div class="col-md-9 open-course-views">
