--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-show.html.twig
@@ -4,44 +4,29 @@
 {% block full_content %}
   {% block top_content %}{% endblock %}
   
-  <div class="container">
+  <div class="container openCourse-container">
     {% block content %}
-      <ol class="breadcrumb breadcrumb-o">
-        <li><a href="{{ path('homepage') }}">首页</a></li>
-        <li><a href="{{ path('open_course_explore') }}" target="_blank">公开课</a></li>
-        <li>{{ course.title }}</li>
-      </ol>
-
-      <div class="row" style="margin:0">
-
-        {{ render(controller('TopxiaWebBundle:OpenCourse:header',{course:course, lessonId:lessonId|default(null)})) }}
-        
-      <div class="col-md-3 open-course-tab open-course-mobile-tab js-open-course-tab">
-          <ul class="clearfix">
-            <li class="tab-header active">推荐课程</li>
-            {% if course.type == 'open' %}
-              <li class="tab-header">课时列表</li>
-            {% endif %}
-          </ul>
-          <div id="content">
-            <ul id="recommand-tab" >
-              {% include 'TopxiaWebBundle:OpenCourse:recommend-course-list.html.twig'%}
-            </ul>
-            <ul id="live-tab" style="display:none">
-              {% include 'TopxiaWebBundle:OpenCourse:open-course-lesson-list.html.twig' with {currentLessonId:lessonId|default(null)} %}
-            </ul>
-          </div>
+      {{ render(controller('TopxiaWebBundle:OpenCourse:header',{course:course, lessonId:lessonId|default(null)})) }}
+      <div class="panel panel-default openCourse-panel">
+        <div class="panel-heading">
+          推荐课程
+        </div>
+        <div class="panel-body">
+          {% include 'TopxiaWebBundle:OpenCourse:Mobile/recommend-course-list.html.twig'%}
         </div>
       </div>
-      
-      <div class="open-course-detail row">
-        <div class="col-md-9">
-          <div class="es-section gray-darker editor-text">
-            {% if course.about %}
-              {{ course.about|raw }}
-            {% else %}
-              <div class="empty">暂无简介</div>
-            {% endif %}
+      <div class="open-course-detail">
+          <div class="panel panel-default openCourse-panel ">
+            <div class="panel-heading">
+              课程介绍
+            </div>
+            <div class="panel-body openCourse-intro">
+              {% if course.about %}
+                {{ course.about|raw }}
+              {% else %}
+                <div class="empty">暂无简介</div>
+              {% endif %}
+            </div>
           </div>
           {{ render(controller('TopxiaWebBundle:OpenCourse:comment',{request:app.request,courseId:course.id, as:app.request.get('as')|default('')})) }}
         </div>
