--- a/web/assets/v2/css/main.css
+++ b/web/assets/v2/css/main.css
@@ -13674,6 +13674,11 @@ textarea {
   width: 24%;
   text-align: center;
 }
+@media (max-width: 991px) {
+  .openCourse-detail-operation .operation-list {
+    width: 32%;
+  }
+}
 .openCourse-detail-operation .operation-img {
   display: inline-block;
   width: 36px;
@@ -13711,6 +13716,82 @@ textarea {
 .openCourse-detail-operation .operation-code:hover {
   background: #ff8a0c;
 }
+.openCourse-container {
+  padding: 0;
+}
+.openCourse-panel {
+  margin: 15px 0;
+  border-color: transparent;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+.openCourse-panel .panel-heading {
+  border: none;
+}
+.openCourse-panel .panel-heading:before {
+  content: '';
+  display: inline-block;
+  width: 4px;
+  height: 20px;
+  background: #46c37b;
+  vertical-align: sub;
+  margin-right: 6px;
+}
+.openCourse-intro img {
+  max-width: 100%;
+}
+.openCourse-recommend {
+  margin-bottom: 15px;
+}
+.openCourse-recommend:last-child {
+  margin-bottom: 0;
+}
+.openCourse-recommend img {
+  max-width: 120px;
+  width: 120px;
+  height: 64px;
+}
+.openCourse-recommend .openCourse-img {
+  float: left;
+  width: 30%;
+  margin-right: 20px;
+}
+.openCourse-recommend .openCourse-content {
+  float: left;
+  width: 64%;
+}
+.openCourse-recommend .title {
+  margin: 10px 0;
+}
+.openCourse-recommend .title a {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+  color: #313131;
+}
+.openCourse-recommend .metas {
+  font-size: 12px;
+  color: #919191;
+}
+.open-course-img {
+  float: left;
+  width: 15%;
+}
+.open-course-comment {
+  float: left;
+  width: 80%;
+  margin: 0 auto;
+}
+.open-course-comment textarea {
+  margin: 0 auto;
+}
+.open-course-comment textarea.form-control-o {
+  background-color: transparent;
+  border: 1px solid #f5f5f5;
+}
 .es-openCourse-list .course-item .title {
   width: 70%;
   display: inline-block;
@@ -13747,9 +13828,76 @@ textarea {
   word-wrap: normal;
 }
 .open-course-mobile-title {
-  font-size: 17px;
+  font-size: 20px;
+  margin-bottom: 0;
+  padding: 10px 10px 0;
+  background: #fff;
+  margin-top: 15px;
+}
+.open-course-mobile-title p {
+  font-size: 16px;
+}
+.open-course-mask {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+.open-course-mask .mask-content {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 330px;
+  height: 160px;
+  margin-top: -80px;
+  margin-left: -165px;
+  text-align: center;
+}
+.open-course-mask .mask-content h2 {
+  color: #fff;
+  font-size: 20px;
   margin-bottom: 20px;
-  padding: 20px;
+}
+.open-course-mask .mask-content .mask-btn {
+  font-size: 20px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+.open-course-mask .mask-content .mask-btn .es-icon {
+  font-size: 23px;
+  padding-left: 10px;
+}
+.open-course-mask .open-course-content {
+  background: transparent;
+  text-align: center;
+}
+.open-course-mask .open-course-content img {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.open-course-mask .open-course-content .metas {
+  position: absolute;
+  left: 50%;
+  margin-left: -142px;
+  top: 156px;
+}
+.open-course-mask .open-course-content p {
+  font-size: 22px;
+  color: #fff;
+}
+.open-course-mask .open-course-content .open-course-btn {
+  border: 1px solid #fff;
+  color: #fff;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  margin-top: 10px;
 }
 .open-course-views {
   position: relative;
@@ -13799,6 +13947,33 @@ textarea {
   font-size: 23px;
   padding-left: 10px;
 }
+.open-course-views .mask .open-course-content {
+  background: transparent;
+  text-align: center;
+}
+.open-course-views .mask .open-course-content img {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.open-course-views .mask .open-course-content .metas {
+  position: absolute;
+  left: 50%;
+  margin-left: -142px;
+  top: 156px;
+}
+.open-course-views .mask .open-course-content p {
+  font-size: 22px;
+  color: #fff;
+}
+.open-course-views .mask .open-course-content .open-course-btn {
+  border: 1px solid #fff;
+  color: #fff;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  margin-top: 10px;
+}
 .open-course-views .modal-dialog .modal-img {
   float: left;
   width: 33.3%;
@@ -13841,6 +14016,7 @@ textarea {
 }
 .open-course-mobile-views {
   background: #fff;
+  padding: 0 10px;
 }
 .open-course-tab {
   height: 500px;
